<resources>
    <string name="app_name">FrebFit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_with">Log in with</string>
    <string name="signin">SIGNIN</string>
    <string name="email_address">Email address :</string>
    <string name="continue_with">Continue with</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="register">Register</string>
    <string name="Password">Password:</string>
    <string name="user_name">User name :</string>
    <string name="Log_in">Log in</string>
    <string name="Sign_in">Sign in</string>
    <string name="Forgot_password">Forgot Password ?</string>
    <string name="User_name">User name :</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="already_registered_log_in">Already registered ? Log in!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Freb_Fit">Freb fit</string>
    <string name="Intro">WE’LL HELP YOU ON YOUR FITNESS JOURNEY\nAt Frebson Fitness, we believe that just like love, art,\nOr music, exercise enhances the human condition, \nAnd is not a destination but a lifetime journey. Let’s go on this journey together.</string>
    <string name="Begin">Start A Program</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="programs">Recommended Program</string>
    <string name="bottom_page"> © meta 2024</string>
    <string name="bottom_page2">Terms of use\n</string>
    <string name="bottom_page3"> Privacy Policy</string>
    <string name="bottom_page4"> Remember to always keep your fitness in check 💪</string>
    <string name="bottom_page5"> Follow us on all platforms</string>
    <string name="get_instructor">Get An Instructor</string>
    <string name="no_new_not">No New Notifications</string>
    <string name="check_your_activity">Check your Activity</string>
    <string name="decr1">Monitor your progress</string>
    <string name="take_a_survey">Take a survey</string>
    <string name="survey_desc">Try a survey, so we could know Exactly your body type in order for Us to help better and keep better Track of your progress</string>
    <string name="survey">Survey</string>
    <string name="disclaimer_descr">This Application is a Demo, and as it mimics features of other fitness apps, it infringes no copyrights of any similar apps. It has only partially integrated functionalities, a non-existent server and functions only as a placeholder for what is to come.</string>
    <string name="enjoy">Enjoy</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="edit">Edit</string>
    <string name="bmi_kg_m">BMI(Kg/m)</string>
    <string name="edit2">Edit</string>
    <string name="notification">notification</string>
    <string name="start_program">start_program</string>
    <string name="session_01">Session 01</string>
    <string name="_50mins_session">50mins Session</string>
    <string name="session_02">Session 02</string>
    <string name="_30mins_session">30mins Session</string>
    <string name="_45mins_session">45mins Session</string>
    <string name="session_03">Session 03</string>
    <string name="session_04">Session 04</string>
    <string name="session_05">Session 05</string>
    <string name="_35mins_session">35mins Session</string>
    <string name="session_06">Session 06</string>
    <string name="session_07">Session 07</string>
    <string name="_40mins_session">40mins Session</string>
    <string name="music_feature">Music feature</string>
    <string name="promo">Hey user, we have a music player feature coming soon !</string>
    <string name="freb_fit_music_player">Freb Fit Music Player</string>
    <string name="find_a_trainer">Find a trainer for assistance</string>
    <string name="attention">Attention !</string>
    <string name="feature_coming_soon">Feature coming soon</string>
    <string name="attention_descr">This feature requires an internet connection and user input. This app being a demo can not achieve that.... yet</string>
    <string name="disclaimer">Disclaimer !</string>
    <string name="image7">image7</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="viewpager">viewpager</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="program">Program</string>
    <string name="instructors">Instructors</string>
    <string name="primary_background">primary_background</string>
    <string name="secondary_background">secondary_background</string>
    <string name="version_0_9">Version 0.9</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="about_us">About us</string>
    <string name="background">background</string>
    <string name="beginner">Beginner</string>
    <string name="begginer">begginer</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="select_training_difficulty">Select Training Difficulty</string>
    <string name="each_plan_last_for_a_month">Each plan last for a month</string>
    <string name="back1">back1</string>
    <string name="back2">back2</string>
    <string name="reports">Reports</string>
    <string name="history">History</string>
    <string name="all_records">All records</string>
    <string name="frame_layout">\n</string>
    <string name="training_section">Training Sections</string>
    <string name="chest">Chest </string>
    <string name="arm">Arm </string>
    <string name="six_pack">Six pack</string>
    <string name="full_txt">Full Body\nChallenge</string>
    <string name="lower_txt">Lower Body\nChallenge</string>
    <string name="begginer1">begginer1</string>
    <string name="inter1">inter1</string>
    <string name="adv1">adv1</string>
    <string name="begginer2">begginer2</string>
    <string name="begginer3">begginer3</string>
    <string name="begginer4">begginer4</string>
    <string name="begginer5">begginer5</string>
    <string name="begginer6">begginer6</string>
    <string name="begginer7">begginer7</string>
    <string name="back">Back</string>
    <string name="back_1">Back\n</string>
    <string name="leg">Legs</string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="log_out">Log out</string>
    <string name="shoulder"><![CDATA[& Shoulder]]></string>
    <string name="back_"><![CDATA[& back]]></string>
    <string name="recomended_programs">Recomended Programs</string>
    <string name="start">Start</string>
    <string name="profile">profile</string>
    <string name="arw1">arw1_</string>
    <string name="arw2">arw2_</string>
    <string name="arw3">arw3_</string>
    <string name="arw4">arw4_</string>
    <string name="nelson_otika">Nelson Otika</string>
    <string name="be_disciplined_not_motivated">~Be disciplined not motivated~</string>
    <string name="hide_notifications">Hide Notifications</string>
    <string name="private_account">Private Account</string>
    <string name="tab">tab</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="enter_the_otp_sent_to_your_email_and_your_new_password">Enter the OTP sent to your email and your new password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="icon">icon</string>
    <string name="view_pager">view_pager\n</string>
    <string name="notification_description">Notification Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="delete">Delete</string>
    <string name="clear_all_notifications">Clear All Notifications</string>
    <string name="abs">Abs</string>
    <string name="facebook_app_id" />
    <string name="next">Next</string>
    <string name="enter_your_height_in_cm">Enter your height in cm</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="enter_your_weight_in_kg">Enter your weight in kg</string>
    <string name="what_is_your_weight">What do you weigh?</string>
    <string name="change_your_profile_pic">Change your profile pic</string>
    <string name="change_username">Change Username :</string>
    <string name="add_bio">Add Bio</string>
    <string name="bio">Bio</string>
    <string name="profile_scroll_view">Profile_Scroll_View</string>
    <string name="enter_text">Enter text</string>
    <string name="done">Done</string>
    <string name="specify_in_detail">Specify in detail</string>
    <string name="what_exactly_are_your_fitness_goals">What exactly are your fitness goals?</string>
    <string name="_6_or_more_times">6 or more times</string>
    <string name="_3_5_times">3-5 times</string>
    <string name="_1_2_times">1-2 times</string>
    <string name="none">None</string>
    <string name="how_often_do_you_excercise">How often do you excercise?</string>
    <string name="is_there_any_additional_feedback_or_comments_you_would_like_to_provide_regarding_your_exercise_preferences">Is there any additional feedback or comments you would like to provide regarding your exercise preferences?</string>
    <string name="thank_you_for_completing_the_survey">Thank you for completing the survey!</string>
    <string name="more_about_your_fitness">More about your fitness</string>
    <string name="if_yes_please_specify">If yes, please specify.</string>
    <string name="do_you_have_any_fitness_related_injuries_or_health_conditions_that_may_affect_your_workout_routine">Do you have any fitness-related injuries or health conditions that may affect your workout routine?</string>
    <string name="how_do_you_track_your_fitness_progress">How do you track your fitness progress?</string>
    <string name="what_challenges_do_you_face_in_maintaining_a_consistent_fitness_routine">What challenges do you face in maintaining a consistent fitness routine?</string>
    <string name="how_do_you_stay_motivated_during_times_of_low_energy_or_lack_of_motivation">How do you stay motivated during times of low energy or lack of motivation?</string>
    <string name="rest_and_recovery">Rest and recovery</string>
    <string name="set_small_goals">Set small goals</string>
    <string name="music">Music</string>
    <string name="reward_system">Reward system</string>
    <string name="how_often_do_you_play_sports">How often do you play sports?</string>
    <string name="every_day">Every day</string>
    <string name="once_per_week">Once per week</string>
    <string name="every_other_day">Every other day</string>
    <string name="several_times_per_month">Several times per month</string>
    <string name="not_regularly">Not regularly</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_work_with_trainers">Do you work with trainers?</string>
    <string name="not_very_often">Not very often</string>
    <string name="how_many_days_per_week_do_you_typically_exercise">How many days per week do you typically exercise?</string>
</resources>