<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background3"
    android:backgroundTint="@color/Back_Black"
    android:backgroundTintMode="src_over"
    tools:context=".reset_password">

    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/reset_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp_sent_to_your_email_and_your_new_password"
        android:textSize="16sp"
        android:layout_below="@id/reset_password_title"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/reset_password_otp"
        android:layout_width="400dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/otp"
        android:inputType="numberPassword"
        android:layout_below="@id/reset_password_description"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@drawable/rounded_corner_edit"/>

    <EditText
        android:id="@+id/reset_password_new"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/reset_password_otp"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@drawable/rounded_corner_edit"/>

    <EditText
        android:id="@+id/reset_password_confirm"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_below="@id/reset_password_new"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@drawable/rounded_corner_edit"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:layout_below="@id/reset_password_confirm"
        android:layout_marginTop="16dp"
        android:background="@drawable/icon_back1"
        android:textColor="@color/white"
        android:padding="10dp"/>
</RelativeLayout>
