<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background3"
    android:backgroundTint="@color/Back_Black"
    android:backgroundTintMode="src_over"
    tools:context=".forgot_password">

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/forgot_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address_to_reset_your_password"
        android:textSize="16sp"
        android:layout_below="@id/forgot_password_title"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@color/White"
        android:layout_below="@id/forgot_password_description"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@drawable/rounded_corner_edit"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password"
        android:layout_below="@id/email"
        android:layout_marginTop="16dp"
        android:background="@color/Primary"
        android:textColor="@color/white"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:text="@string/back_to_login"
        android:textSize="18sp"
        android:textColor="@color/Primary"
        android:layout_below="@id/forgot_password_button"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"/>
</RelativeLayout>
