<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startup"
    tools:context=".Startup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/frebson_icon" />

    <ImageButton
        android:id="@+id/login_btn"
        android:layout_width="250sp"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/gradient5"
        android:clickable="true"
        android:contentDescription="@string/login"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignBottom="@+id/login_btn"
        android:text="@string/Log_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/Signup_btn"
        android:layout_width="250sp"
        android:layout_height="48dp"
        android:layout_margin="10sp"
        android:clickable="true"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient5"
        android:contentDescription="@string/sign_up"
        android:focusable="true"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignBottom="@+id/Signup_btn"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

</RelativeLayout>